singularity/benchmarks/jobs/error3274769.err
  File "main.py", line 231
    if args.benchmark
                    ^
SyntaxError: invalid syntax
